--- a/src/app/createusers/createusers.component.html
+++ b/src/app/createusers/createusers.component.html
@@ -5,17 +5,114 @@
             <h2>Create Users</h2>
             <label>Name :</label>
             <input type="text" formControlName="name">
+            <!-- input form validators -->
+            <div class="text-danger" *ngIf="usersForm.get('name')?.touched && usersForm.get('name')?.invalid">
+                <p *ngIf="usersForm.get('name')?.errors?.['required']">Name is required</p>
+                <p *ngIf="usersForm.get('name')?.errors?.['minlength']">Name should have min 3 characters</p>
+            </div>
+
             <br>
             <label>Phone :</label>
             <input type="text" formControlName="phone">
+            <!-- input form validators -->
+            <div class="text-danger" *ngIf="usersForm.get('phone')?.touched && usersForm.get('phone')?.invalid">
+                <p *ngIf="usersForm.get('phone')?.errors?.['required']">Phone number is required</p>
+                <p *ngIf="usersForm.get('phone')?.errors?.['min']">Phone Number should be 10 digits</p>
+                <p *ngIf="usersForm.get('phone')?.errors?.['max']">Phone Number should not be more than 10 digits</p>
+            </div>
+
             <br>
             <label>City :</label>
             <input type="text" formControlName="city">
             <br>
             <label>Fee</label>
             <input type="text" formControlName="fee">
-            <br><br>
+            <br>
+
+            <div formGroupName="address">
+
+                <label>Hno:</label>
+                <input type="text" formControlName="hno">
+                <br>
+
+                <label>State:</label>
+                <input type="text" formControlName="state">
+                <!-- nested form validators -->
+                <div class="text-danger"
+                    *ngIf="usersForm.get('address')?.get('state')?.touched && usersForm.get('address')?.get('state')?.invalid">
+                    <p *ngIf="usersForm.get('address')?.get('state')?.errors?.['required']">State is required</p>
+                </div>
+                <br>
+
+                <label>Pin:</label>
+                <input type="text" formControlName="pin">
+                <!-- nested form validators -->
+                <div class="text-danger"
+                    *ngIf="usersForm.get('address')?.get('pin')?.touched && usersForm.get('address')?.get('pin')?.invalid">
+                    <p *ngIf="usersForm.get('address')?.get('pin')?.errors?.['required']">Pin is required</p>
+                    <p *ngIf="usersForm.get('address')?.get('pin')?.errors?.['min']">Pin should be min 6 digits</p>
+                    <p *ngIf="usersForm.get('address')?.get('pin')?.errors?.['max']">Pin should not be more than 6 digits
+                    </p>
+                </div>
+                <br>
+
+            </div>
+
+            <label>type:</label>
+            <input type="radio" name="type" formControlName="type" value="dayScholor">
+            <label>day scholor</label>
+            <input type="radio" name="type" formControlName="type" value="residentail">
+            <label>residential</label>
+            <br>
+
+            <div *ngIf="usersForm.get('type')?.value == 'dayScholor'">
+                <label>bus fee:</label>
+                <input type="number" formControlName="busFee">
+                <br>
+            </div>
+
+            <div *ngIf="usersForm.get('type')?.value == 'residentail'">
+                <label>hostelFee:</label>
+                <input type="number" formControlName="hostelFee">
+                <br>
+            </div>
+
+            <button (click)="addCards()">add card</button>
+
+            <div formGroupName="cards">
+                <div *ngFor="let card of cardsFormArray.controls; let i=index">
+                    <div formGroupName="{{i}}">
+
+                        <h2>Card{{i+1}}</h2>
+                        <label>No:</label>
+                        <input type="text" formControlName="no">
+                        <br>
+
+                        <label>Exp</label>
+                        <input type="text" formControlName="exp">
+                        <br>
+
+                        <label>Cvv</label>
+                        <input type="text" formControlName="cvv">
+                        <!-- array form validators -->
+                        <div class="text-danger"
+                            *ngIf="cardsFormArray.controls[i]?.get('cvv')?.touched && cardsFormArray.controls[i]?.get('cvv')?.invalid">
+                            <p *ngIf="cardsFormArray.controls[i]?.get('cvv')?.errors?.['required']">CVV is required</p>
+                            <p *ngIf="cardsFormArray.controls[i]?.get('cvv')?.errors?.['min']">CVV should be 3 digits
+                            </p>
+                            <p *ngIf="cardsFormArray.controls[i]?.get('cvv')?.errors?.['max']">CVV should not be more
+                                than 3 digits</p>
+                        </div>
+                        <br>
+
+                        <button (click)="deleteCard(i)">delete</button>
+
+                    </div>
+                </div>
+            </div>
+            <br>
             <button (click)="submit()">submit</button>
+
         </form>
 
     </div>
