--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -58,7 +58,10 @@
                 <img src="{{vehicle.image}}" alt="" height="100px" width="100px">
             </td>
             <td>{{vehicle.id}}</td>
-            <td><button (click)="getdeletevehicle(vehicle.id)" >delete</button></td>
+            <td>
+                <button (click)="getdeletevehicle(vehicle.id)" >delete</button>
+                <button (click)=" view(vehicle.id)" >view</button>
+            </td>
         </tr>
     </tbody>
 </table>
