--- a/src/app/vehicle/vehicle.component.html
+++ b/src/app/vehicle/vehicle.component.html
@@ -44,6 +44,8 @@
             <th>image</th>
             <th>id</th>
             <th>action</th>
+            <th>view</th>
+            <th>Edit</th>
         </tr>
     </thead>
     <tbody>
@@ -58,9 +60,15 @@
                 <img src="{{vehicle.image}}" alt="" height="100px" width="100px">
             </td>
             <td>{{vehicle.id}}</td>
+           
             <td>
-                <button (click)="getdeletevehicle(vehicle.id)" >delete</button>
-                <button (click)=" view(vehicle.id)" >view</button>
+                <button  (click)="getdeletevehicle(vehicle.id)"  class="btn btn-danger">delete</button>
+            </td>
+            <td>
+                 <button (click)=" view(vehicle.id)" class="btn btn-primary">view</button>
+            </td>
+            <td>
+                <button (click)="edit(vehicle.id)" class="btn btn-primary">Edit</button>
             </td>
         </tr>
     </tbody>
