chlid to parent comnication of add sub maltiplication

--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -30,6 +30,8 @@
         <h2 routerLink="createvehicle">Create vehicle</h2>
         <h2 routerLink="createaccount">Create Account</h2>
         <h2 routerLink="createusers">Create Useres</h2>
+        <h2 routerLink="parent">parent</h2>
+        <h2 routerLink="child">child</h2>
         <hr class="line-bellow" >
         <br>
         <button class="logout" (click)="logout()">Logout</button>
