--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -42,6 +42,7 @@
             <th>Id</th>
             <th>action</th>
             <th>View</th>
+            <th>Edit</th>
         </tr>
     </thead>
     <tbody>
@@ -60,7 +61,9 @@
             <td>
                 <button  (click)="view(account.id)">View</button>
             </td>
-
+            <td>
+                <button (click)="edit(account.id)">Edit</button>
+            </td>
         </tr>
     </tbody>
 </table>
