--- a/src/app/dashbord/dashbord.component.css
+++ b/src/app/dashbord/dashbord.component.css
@@ -16,6 +16,10 @@
     background-color: rgb(217, 191, 191);   
     text-align: center;
     overflow: auto;
+    background-color: #D9AFD9;
+background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+
+   
 }
 .left h2{
     margin: 0;
