sibling communication method

--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -32,6 +32,9 @@
         <h2 routerLink="createusers">Create Useres</h2>
         <h2 routerLink="parent">parent</h2>
         <h2 routerLink="child">child</h2>
+        <h2 routerLink="item">item</h2>
+        <h2 routerLink="nav">nav</h2>
+        <h2 routerLink="cart">cart</h2>
         <hr class="line-bellow" >
         <br>
         <button class="logout" (click)="logout()">Logout</button>
