--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -35,6 +35,7 @@
         <h2 routerLink="item">item</h2>
         <h2 routerLink="nav">nav</h2>
         <h2 routerLink="cart">cart</h2>
+        <h2 routerLink="phone">phone</h2>
         <hr class="line-bellow" >
         <br>
         <button class="logout" (click)="logout()">Logout</button>
