--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -36,9 +36,14 @@
         <h2 routerLink="nav">nav</h2>
         <h2 routerLink="cart">cart</h2>
         <h2 routerLink="phone">phone</h2>
+        <h2 routerLink="about-ceo">About-ceo</h2>
+        <h2 routerLink="about-company">About-company</h2>
+        <h2 routerLink="contact/contact-hr">Contact-hr</h2>
+        <h2 routerLink="contact/contact-support">Contact-Spport</h2>
+
         <hr class="line-bellow" >
         <br>
-        <button class="logout" (click)="logout()">Logout</button>
+        <button class="Logout" (click)="logout()">Logout</button>
 
     </div>
     <div class="right">
